Dish description UI added, Product description removed (#64)